--- a/StockDemoApp/src/main/resources/application.yml
+++ b/StockDemoApp/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+  
 management:
  endpoints:
   web:
@@ -8,12 +11,19 @@ management:
 
 spring:
  datasource:
-  url: jdbc:mysql://localhost:3306/stockdb
-  driver-class-name: com.mysql.cj.jdbc.Driver
-  username: root
-  password: root
-  jpa:
-   hibernate.ddl-auto: update
-   properties:
-   hibernate:
-    dialect: org.hibernate.dialect.MySQL8Dialect
+    url: jdbc:mysql://localhost:3306/stockdb
+#  driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: root
+ jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
+ data:
+   mongodb:
+    host: localhost
+    port: 27017
+    database: mydb
